--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   "license": "ISC",
   "dependencies": {
     "@babel/polyfill": "^7.12.1",
-    "axios": "^1.6.2",
+    "@popperjs/core": "^2.11.8",
+    "axios": "^1.7.2",
     "bcryptjs": "^2.4.3",
+    "bootstrap": "^5.3.3",
     "compression": "^1.7.4",
     "cookie-parse": "^0.4.0",
     "cookie-parser": "^1.4.6",
